osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[Optional[str, str]].txt
error: `Optional` must have exactly one argument
--> main.sml:1:5
     |
   1 | Foo: Optional[str, str] = JsonData(path='$.foo')
     |      ^ got 2 arguments
